fix horizontal scroll bar on skillq

--- a/src/static/s.css
+++ b/src/static/s.css
@@ -645,6 +645,7 @@ footer { text-align: center; }
     height: 1px;
     bottom: 2px;
     background: var(--skillq-t);
+    margin-bottom: -1px;
 }
 
 .skill_queue_duration_bar_injectable {
